<resources>
    <string name="app_name">卖车神器</string>
    <string name="hc_encouragement">新的一天，新的开始，为了牛B的理想，加油！</string>
    <string name="action_settings">我的设置</string>
    <string name="hc_income_detail">薪资详情>></string>
    <string name="hc_income_title">薪资详情</string>
    <string name="action_ok">确定</string>
    <string name="p_title_orgin_pwd">原  密  码</string>
    <string name="p_title_new_pwd">新  密  码</string>
    <string name="p_title_new_pwd_again">确认密码</string>
    <string name="p_appoint_time">预约时间 </string>
    <string name="p_appoint_address">看车地点</string>
    <string name="p_vehicle_source_id">车源编号</string>
    <string name="seller_info">车\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020主</string>
    <string name="p_seller">车主</string>
    <string name="p_buyer">买家</string>
    <string name="p_service_pay">服务费</string>
    <string name="p_service_pay_sub">应补差价</string>
    <string name="carmodel">车\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020型</string>
    <string name="login">登录</string>
    <string name="modify">修改</string>
    <string name="change_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="p_appoint_comment">备注</string>
    <string name="yes">有</string>
    <string name="comment">备注</string>
    <string name="hc_loading">加载中...</string>
    <string name="select_transfer_time">选择过户时间</string>
    <string name="soft_update_cancel">取消</string>
    <string name="p_cancel">取消</string>
    <string name="p_ok">确认</string>
    <string name="tips">提示</string>
    <string name="buyer_clues">我的推荐</string>
    <string name="buyer_clues_null">全部线索列表为空</string>
    <string name="buyer_clues_success_null">成功线索列表为空</string>
    <string name="hint_buyerphone">买家电话</string>
    <string name="hint_buyerinfo">请说明买家想购买的车型、预算、要求等,如：张先生要购买一辆12万左右的蓝色别克GL8</string>
    <string name="button_ok">确定</string>
    <string name="myqrcode">http://wx.haoche51.com/wx_center/share?checker_id=</string>
    <string name="hc_buyer_give_company">买家给公司定金</string>
    <string name="hc_buyer_give_carowner">买家给车主定金</string>
    <string name="hc_carowner_give_company">车主给公司定金</string>
    <string name="hc_carowner_give_gift">赠送礼品</string>
    <string name="hc_transfer_source">车源编号</string>
    <string name="hc_transfer_plate">车牌号码</string>
    <string name="hc_modify_succ">修改成功</string>
    <string name="hc_transfer_address">过户地点</string>
    <string name="hc_succ">处理成功</string>
    <string name="hc_error">处理失败</string>
    <string name="hc_transfer_list_empty">过户列表为空</string>
    <string name="hc_query">查询</string>
    <string name="hc_yuan">元</string>
    <string name="hc_wanyuan">万元</string>
    <string name="hc_nomeet">未上门</string>
    <string name="hc_look_bad">车没看上</string>
    <string name="hc_price_bad">价格没谈拢</string>
    <string name="hc_vehicle_equal_sys">车型与系统相符</string>
    <string name="hc_checker_accompany">地\u0020\u0020\u0020\u0020销</string>
    <string name="loading">请稍后&#8230;</string>
    <string name="hello_world">Hello world!</string>
    <string name="hc_loadmore">加载更多</string>
    <string name="hc_nomore_data">没有更多数据了</string>
    <string name="see_failure">带看失败</string>
    <string name="select_failed_type">请选择失败类型</string>
    <string name="hc_company_transfer_pay">公司包过户</string>
    <string name="transfer_own">自行过户</string>
    <string name="transfer_company">公司过户</string>
    <string name="common_erro_http_gson_decode">网络数据解析出错</string>
    <string name="common_erro_intent_extra">参数传递出错</string>
    <string name="common_title_back">返回</string>
    <string name="common_title_cancel">取消</string>
    <string name="common_title_commit">确定</string>
    <string name="hc_common_save">保存</string>
    <string name="hc_common_modify">修改</string>
    <string name="common_list_no_data">暂无数据</string>
    <string name="common_click_to_refresh">点击刷新</string>
    <string name="nomarl_select_unlimited">不限</string>
    <string name="nomarl_select_please_select">请选择</string>
    <string name="vehicle_subscribe_condition_brand_lable">品牌车系</string>
    <string name="vehicle_subscribe_condition_add">添加</string>
    <string name="hc_clue_type">线索类型</string>
    <string name="hc_outside_source">外网车源</string>
    <string name="hc_inside_source">内网车源</string>
    <string name="vehicle_subscribe_condition_remark_lable">客户备注</string>
    <string name="vehicle_subscribe_condition_price_lable">价格范围[万元]</string>
    <string name="vehicle_subscribe_condition_discharge_standard_lable">排放标准</string>
    <string name="vehicle_subscribe_condition_structure_lable">车身结构</string>
    <string name="vehicle_subscribe_condition_displacement_lable">排量</string>
    <string name="vehicle_subscribe_condition_vehicle_old_lable">车龄（年）</string>
    <string name="vehicle_subscribe_condition_transmission_lable">变速箱</string>
    <string name="vehicle_subscribe_condition_color_lable">颜色</string>
    <string name="vehicle_subscribe_condition_title">车源订阅</string>
    <string name="vehicle_sube_brand_add__title">添加品牌车系</string>
    <string name="match_customer_list_activity_title">车源推荐详情</string>
    <string name="share_dialog_text_weixin">用户微信号已复制\n点击【分享】后进入微信\n将复制内容粘贴到搜索框\n</string>
    <string name="share_dialog_text_phone">用户手机号已复制\n点击【分享】后进入微信\n将复制内容粘贴到搜索框\n</string>
    <string name="view_vehicle_task_detail_status">任务状态</string>
    <string name="layout_user_setting_qrcode">二维码分享</string>
    <string name="layout_user_setting_update">检查更新</string>
    <string name="breach_of_promise">毁约</string>
    <string name="already_breach_of_promise">已毁约</string>
    <string name="breach_of_promise_to_confirm">毁约待确认</string>
    <string name="the_unknown">未知</string>
    <string name="with_the_failure">带看失败</string>
    <string name="see_succ">带看成功</string>
    <string name="cluesstatus_default">跟进中</string>
    <string name="cluesstatus_processing">处理中</string>
    <string name="cluesstatus_success">已处理</string>
    <string name="cluesstatus_invalid">无效</string>
    <string name="waiting_check">待检</string>
    <string name="audit">审核</string>
    <string name="online">上线</string>
    <string name="reservation">预定</string>
    <string name="sold">售出</string>
    <string name="company_repurchase">公司回购</string>
    <string name="seller_sold">车主售出</string>
    <string name="later">请稍后...</string>
    <string name="no_choose">不能选之前的时间</string>
    <string name="server_no_response">对不起，服务器繁忙，请稍后重试...</string>
    <string name="old_pwd_error">原始密码不正确</string>
    <string name="loging">登录中请稍后...</string>
    <string name="cancellation">注销中,请稍后...</string>
    <string name="download_towifi">请在wifi下更新</string>
    <string name="net_timeout">连接超时</string>
    <string name="select_time">选择时间</string>
    <string name="price_format_error">成交价格式不正确</string>
    <string name="commission_format_error">服务费格式不正确</string>
    <string name="company_prepay_format_error">买家给公司定金格式不正确</string>
    <string name="seller_prepay_format_error">买家给车主定金格式不正确</string>
    <string name="carowner_give_company_format_error">车主给公司定金格式不正确</string>
    <string name="buyer_give_seller_money_empty">买家给车主定金不能为空，无定金请填0</string>
    <string name="buyer_give_company_money_empty">买家给公司定金不能为空，无定金请填0</string>
    <string name="seller_give_company_money_empty">车主给公司定金不能为空，无定金请填0</string>
    <string name="transfer_place_empty">过户地点不能为空不能为空</string>
    <string name="transfer_time_empty">过户时间不能为空</string>
    <string name="add_revisit">添加回访记录</string>
    <string name="tip_input_content">请输入内容~</string>
    <string name="add_success">添加成功！</string>
    <string name="transaction_detail">看车详情</string>
    <string name="add_remark">添加备注</string>
    <string name="modify_remark">修改备注</string>
    <string name="tip_input_remark">请填写50字以内的备注信息</string>
    <string name="buyer_revisit">回访记录</string>
    <string name="buyer_trans_history">买家看车记录</string>
    <string name="select_cancel_party">请选择毁约方~</string>
    <string name="select_vehicle_status">请选择操作车源~</string>
    <string name="successful">操作成功！</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="intended_source">意向车源</string>
    <string name="lack_parameter">缺少参数~</string>
    <string name="parameters_error">传递参数有误</string>
    <string name="match_customer_count">共匹配客户\u0020%s</string>
    <string name="pay_deposit">预定成功</string>
    <string name="pay_deposit_succ">买家支付定金成功!</string>
    <string name="lack_phone">信息不完整，缺少手机号~</string>
    <string name="copy">复制成功</string>
    <string name="pars_subscribe_error">获取订阅条件解析出错</string>
    <string name="tip_low_less_height">最低价应低于最高价</string>
    <string name="tip_low_less_height_displacement">最低排量应低于最高排量</string>
    <string name="tip_lowage_less_heightage">最低车龄应低于最高车龄</string>
    <string name="contact_group">好车无忧-客户</string>
    <string name="did_not_get">未获取</string>
    <string name="obtaing">获取中</string>
    <string name="get_succ">获取成功</string>
    <string name="get_fail">获取失败</string>
    <string name="answer">呼入</string>
    <string name="callout">呼出</string>
    <string name="hc_wan">%s万元</string>
    <string name="rc_icon_url">"%s?imageView2/2/w/180/h/140"</string>
    <string name="hint_input_revisit">请输入回访内容</string>
    <string name="transfer_type">过户方式</string>
    <string name="release_party">毁约方</string>
    <string name="vehicle_operation">车源操作</string>
    <string name="hint_bgc_money">买家给公司定金（元）</string>
    <string name="hint_bgs_money">买家给车主定金（元）</string>
    <string name="hint_sgc_money">车主给公司定金（元）</string>
    <string name="hint_cgb_money">公司退买家定金（元）</string>
    <string name="hint_cgs_money">公司退车主定金（元）</string>
    <string name="cancel_reason">毁约原因</string>
    <string name="refund_and_account">退款方式及账号</string>
    <string name="hc_right_work_report">工作汇报</string>
    <string name="hc_right_transaction">看车任务</string>
    <string name="hc_right_custom">客户</string>
    <string name="hc_right_transfer">过户</string>
    <string name="hc_isarrival">是否到店</string>
    <string name="hc_unarrival">未到店</string>
    <string name="hc_arrivaled">已到店</string>
    <string name="hc_custom_level">客户级别</string>
    <string name="hc_next_revisit_time">下次回访时间</string>
    <string name="hc_vehicle_detail">车源详情</string>
    <string name="hc_check_report">车检报告</string>
    <string name="hc_cjd_report">4S店保养记录</string>
    <string name="hc_vehicle_revisit">车源回访记录</string>
    <string name="hc_buyer_revisit">买家回访记录</string>
    <string name="hc_call_record">听录音</string>
    <string name="similar_transaction">相似车源</string>
    <string name="hc_transaction_customer_arrival">到店时间</string>
    <string name="hc_upload">上传</string>
    <string name="hc_transaction_revisit">回访记录</string>
    <string name="hc_vehicle_sub_color_black">黑色</string>
    <string name="hc_vehicle_sub_color_white">白色</string>
    <string name="hc_vehicle_sub_color_silver">银色</string>
    <string name="hc_vehicle_sub_color_gray">灰色</string>
    <string name="hc_vehicle_sub_color_red">红色</string>
    <string name="hc_vehicle_sub_color_blue">蓝色</string>
    <string name="hc_vehicle_sub_color_green">绿色</string>
    <string name="hc_vehicle_sub_color_yellow">黄色</string>
    <string name="hc_vehicle_sub_color_golden">金色</string>
    <string name="hc_vehicle_sub_color_orange">橙色</string>
    <string name="hc_vehicle_sub_two_front">两厢</string>
    <string name="hc_vehicle_sub_three_front">三厢</string>
    <string name="hc_vehicle_sub_suv">SUV</string>
    <string name="hc_vehicle_sub_mpv">MPV</string>
    <string name="hc_vehicle_sub_wagon">旅行车</string>
    <string name="hc_vehicle_sub_sports">跑车</string>
    <string name="hc_vehicle_sub_pickup">皮卡</string>
    <string name="hc_vehicle_sub_minibus">面包车</string>
    <string name="hc_upload_dear">亲爱的同学</string>
    <string name="hc_upload_thank">感谢你在一线辛勤奋战</string>
    <string name="hc_upload_dream">为了牛B的梦想</string>
    <string name="hc_upload_refuel">加油!</string>
    <string name="hc_transfer_detail_exinfo">附加信息</string>
    <string name="commit">提交</string>
</resources>